# omd

./: .gitignore  ASYNC_MCP_IMPLEMENTATION.md  CLAUDE.md  CLOUD_DEPLOYMENT_GUIDE.md  CONTEXT_ERROR_FIX.md  DOCUMENTATION_CONSOLIDATION.md  INSTALL.md  KNOWLEDGE_SOURCES_UPGRADE.md  LANGFUSE_DIAGNOSTICS.md  LANGFUSE_FIX_SUMMARY.md  MODEL_CONFIGURATION.md  Makefile  PACKAGE_CLEANUP_SUMMARY.md  PRIVACY_INTEGRATION_COMPLETE.md  QUICK_START_GUIDE.md  README-AUTOMATION.md  README.md  SESSION_TRACKING_SUMMARY.md  STREAMLIT_ASYNC_GUIDE.md  STREAMLIT_CLOUD_DEPLOYMENT.md  TEST_SESSION_TRACKING.md  UNIFIED_MCP_MIGRATION.md  UNIFIED_MCP_QUICKSTART.md  UNIFIED_MCP_SUMMARY.md  USAGE_EXAMPLES.md  check_setup.py  config.toml  demo_agent.py  docker-compose.yml  enhanced_agent_streamlit.py  environment_setup.md  langfuse_integration.py  mcp.json  migrate_config.py  packages.txt  pytest.ini  requirements.txt  run_streamlit.sh  run_tests.py  setup_env.py  (+27 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml
config/: README.md  config.development.toml  config.production.toml.example  config.staging.toml  example.py  integrations.py  mcp.json  requirements.txt  settings.py
docs/: DEVELOPMENT.md  INDEX.md  INTEGRATION.md  OBSERVABILITY.md  PRIVACY.md  UNIFIED_MCP_GUIDE.md  USAGE_EXAMPLES.md  langfuse_session_tracking.md
enhanced_agent/: README.md  main.py  pyproject.toml  requirements.txt
enhanced_agent/config/: README.md  mcp.json  mcp_extended.json
enhanced_agent/src/: __init__.py  app.py  config_helper.py  dspy_mcp_integration.py  dspy_modules.py  enhanced_mcp_client.py  mcp_client.py  mcp_config.py  ui_integration_example.py  unified_integration.py  unified_mcp_client.py
privacy/: __init__.py  redacted_logger.py  session_manager.py
scripts/: dev.sh  (+1 more)
tests/: README.md  (+2 more)
(+9 files in other folders)
